--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<meta http-equiv="refresh" content="0; url=://oliviaguest.com">
+<meta http-equiv="refresh" content="0; url=http://oliviaguest.com">
 </head>
 <body>
 </body>
